# mg-ball

./: .gitignore  .gitmodules  CMakeLists.txt
modules/: FindImGui.cmake  FindMagnumIntegration.cmake
resources/: BasicShader.frag  BasicShader.vert  TextureShader.frag  TextureShader.vert  TexturedQuadShader.frag  TexturedQuadShader.vert  memo.md  resources.conf
rsc/: TexturedQuadShader.vert
src/: ActorBase.cpp  ActorBase.h  ActorManager.cpp  ActorManager.h  BasicShader.cpp  BasicShader.h  CMakeLists.txt  ConstParam.h  Drawing.cpp  Drawing.h  MainApp.cpp  MainContext.cpp  MainContext.h  MainInput.cpp  MainInput.h  MainRsc.cpp  MainRsc.h  PrimitiveExample.h  TextureExample.cpp  TextureExample.h  TextureShader.cpp  TextureShader.h  TexturedQuadExample.h  TexturedQuadShader.cpp  TexturedQuadShader.h  Util.cpp  Util.h
src/Gaming/: GamingManager.cpp  GamingManager.h  GamingScene.cpp  GamingScene.h  Plain.cpp  Plain.h  PrimeBox.cpp  PrimeBox.h
src/Shaders/: BasicShader.cpp  BasicShader.h  TextureShader.cpp  TextureShader.h  TexturedQuadShader.cpp  TexturedQuadShader.h
src/Utils/: RenderTexture.cpp  RenderTexture.h  TextureDrawer.cpp  TextureDrawer.h
